# newsquant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: settings.py  sources.yaml
finews/: __init__.py  _scraper.py  _sources.py
migrations/: env.py
scraper/cli/: main.py
scraper/db/: __init__.py  models.py  repository.py  session.py
scraper/enrichment/: __init__.py  domain_filter.py  hasher.py  language_detector.py  near_duplicate.py  ticker_extractor.py
scraper/extractors/: __init__.py  trafilatura_extractor.py
scraper/fetchers/: __init__.py  base.py  finnhub.py  gdelt.py  newsapi.py  rss.py  wayback.py
scraper/models/: __init__.py  article.py  source.py
scraper/pipeline/: __init__.py  orchestrator.py
scraper/quality/: __init__.py  pipeline.py
scraper/scheduler/: __init__.py  jobs.py
tests/: conftest.py
tests/test_enrichment/: test_hasher.py  test_near_duplicate.py  test_ticker_extractor.py
tests/test_extractors/: test_trafilatura.py
tests/test_fetchers/: test_rss.py
tests/test_quality/: test_pipeline.py
