[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finews"
version = "0.1.0"
description = "Multi-source financial news library with quality scoring and ticker extraction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["finance", "news", "scraper", "nlp", "trading", "market-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    # HTTP & fetching
    "httpx>=0.27",
    "feedparser>=6.0",
    "tenacity>=8.2",
    # Extraction
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # NLP / enrichment
    "spacy>=3.7",
    "langdetect>=1.0",
    # Data / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # API clients
    "newsapi-python>=0.2",
    # Scheduling
    "apscheduler>=3.10",
    # CLI / UX
    "click>=8.1",
    "rich>=13.7",
    # Config
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.4",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/fayazmoqueem/finews"
Repository = "https://github.com/fayazmoqueem/finews"
"Bug Tracker" = "https://github.com/fayazmoqueem/finews/issues"

[project.scripts]
scraper = "scraper.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*", "config*", "finews*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
files = ["finews/"]
